--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<link href="desktop_stylesheet.css" rel="stylesheet" type="text/css"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="description" content="Web Development">
 	<meta name="keywords" content="Portfolio Website">
@@ -19,7 +20,7 @@
 				<li id="dt">DT</li>
 				<li><a>CONTACT</a></li>
 				<li><a>VIDEO</a></li>
-				<li><a>CAREER</a></li>
+				<li><a>CAREER</a></li>	
 				<li><a>ABOUT</a></li>
 				<li><a>HOME</a></li>
 			</ul>
@@ -68,13 +69,8 @@
 			   	<p id="grid-item-link"><strong>CONTACT</strong></p>
 			</div>
 		</div>
-
 	</div>
-
-	<div class="test">
-		
-	</div>
-
+	
 	<footer><p>Copyright © 2025, Dominique Tait</p></footer>
 
 </body>
