--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link href="desktop_stylesheet.css" rel="stylesheet" type="text/css"/>
+	<link href="stylesheet.css" rel="stylesheet" type="text/css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="description" content="Web Development">
@@ -16,14 +16,14 @@
 	<!-- Horizontal Navigation Bar -->
 	<nav>
 		<div class="nav-container">
-			<ul>
+			<ol>
 				<li id="dt">DT</li>
-				<li><a>CONTACT</a></li>
-				<li><a>VIDEO</a></li>
-				<li><a>CAREER</a></li>	
-				<li><a>ABOUT</a></li>
 				<li><a>HOME</a></li>
-			</ul>
+				<li><a>ABOUT</a></li>
+				<li><a>CAREER</a></li>	
+				<li><a>VIDEO</a></li>
+				<li><a>CONTACT</a></li>
+			</ol>
 		</div>
 	</nav>
 
