--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 
 
 <body>
-
 	<!-- Horizontal Navigation Bar -->
 	<nav>
 		<div class="nav-container">
 			<ol>
 				<li id="dt">DT</li>
-				<li><a>HOME</a></li>
-				<li><a>ABOUT</a></li>
-				<li><a>CAREER</a></li>	
-				<li><a>VIDEO</a></li>
-				<li><a>CONTACT</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="2_about.html">ABOUT</a></li>
+				<li><a href="3_career.html">CAREER</a></li>	
+				<li><a href="4_video.html">VIDEO</a></li>
+				<li><a href="5_contact.html">CONTACT</a></li>
 			</ol>
 		</div>
 	</nav>
@@ -68,6 +67,6 @@
 	</div>
 
 	<footer><p>Copyright © 2025, Dominique Tait</p></footer>
-
 </body>
+
 </html>	
