hamburger nav bar

--- a/6_contact.html
+++ b/6_contact.html
@@ -49,13 +49,13 @@
 
 			<div class="hero-container">
 				<header>
-					<h1>Career</h1>
+					<h1>Contact inforamtion</h1>
 				</header>
 			</div>
 
 			<section>
-				<h4>Career Subtitles</h4>
-				<p>Career text information</p>
+				<h4>Contact Subtitles</h4>
+				<p>Contact text</p>
 			</section>
 
 			<footer><p>Copyright © 2025, Dominique Tait</p></footer>
