--- a/4_video.html
+++ b/4_video.html
@@ -1,35 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<link href="stylesheet.css" rel="stylesheet" type="text/css"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<meta name="description" content="Web Development">
-	<meta name="keywords" content="Portfolio Website">
-	<meta name="author" content="Dominique Tait">
-	<title>Portfolio Website</title>
-</head>
+    <head>
+        <link href="stylesheet.css" rel="stylesheet" type="text/css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta charset="utf-8" />
+        <meta name="description" content="Web Development" />
+        <meta name="keywords" content="Portfolio Website" />
+        <meta name="author" content="Dominique Tait" />
+        <title>Portfolio Website</title>
+    </head>
 
-<body>
-	<nav>
-		<div class="nav-container">
-			<ol>
-				<li id="dt">DT</li>
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="2_about.html">ABOUT</a></li>
-				<li><a href="3_career.html">CAREER</a></li>	
-				<li><a href="4_video.html">VIDEO</a></li>
-				<li><a href="5_contact.html">CONTACT</a></li>
-			</ol>
-		</div>
-	</nav>
+    <body>
+		<main>
+			<nav>
+				<ul class="sidebar">
+					<li onclick="closeSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e3e3e3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+					<li><span class="brand-style">DT</span></li>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="2_about.html">ABOUT</a></li>
+					<li><a href="3_career.html">CAREER</a></li>
+					<li><a href="4_video.html">VIDEO</a></li>
+					<li><a href="5_animations.html">ANIMATIONS</a></li>
+					<li><a href="6_contact.html">CONTACT</a></li>
+				</ul>
+				<ul>
+					<li><span class="brand-style">DT</span></li>
+					<li class="hideOnMobile"><a href="index.html">HOME</a></li>
+					<li class="hideOnMobile"><a href="2_about.html">ABOUT</a></li>
+					<li class="hideOnMobile"><a href="3_career.html">CAREER</a></li>
+					<li class="hideOnMobile"><a href="4_video.html">VIDEO</a></li>
+					<li class="hideOnMobile"><a href="5_animations.html">ANIMATIONS</a></li>
+					<li class="hideOnMobile"><a href="6_contact.html">CONTACT</a></li>
+					<li class="menu-button" onclick="openSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+				</ul>
+			</nav>
 
+			<script>
+				function openSidebar(){
+					const sidebar = document.querySelector('.sidebar')
+					sidebar.style.display = 'flex'
+				}
 
-	<!-- Main -->
+				function closeSidebar(){
+					const sidebar = document.querySelector('.sidebar')
+					sidebar.style.display = 'none'
+				}
+			</script>
 
+			<div class="hero-container">
+				<header>
+					<h1>Video</h1>
+				</header>
+			</div>
 
-	<footer><p>Copyright © 2025, Dominique Tait</p></footer>
+			<section>
+				<h4>Video Subtitles</h4>
+				<p>Video text</p>
+			</section>
 
-</body>
-
+			<footer><p>Copyright © 2025, Dominique Tait</p></footer>
+		</main>
+    </body>
 </html>
