--- a/5_animations.html
+++ b/5_animations.html
@@ -49,13 +49,13 @@
 
 			<div class="hero-container">
 				<header>
-					<h1>Career</h1>
+					<h1>Animation information</h1>
 				</header>
 			</div>
 
 			<section>
-				<h4>Career Subtitles</h4>
-				<p>Career text information</p>
+				<h4>Animation Subtitles</h4>
+				<p>Animation text</p>
 			</section>
 
 			<footer><p>Copyright © 2025, Dominique Tait</p></footer>
