--- a/2_about.html
+++ b/2_about.html
@@ -55,7 +55,61 @@
 
 			<section>
 				<h4>DEMOGRAPHICAL INFORMATION</h4>
-				<p>I’m a 21-year-old female from South Africa, currently studying full-time at Swinburne University.</p>
+				<p>I'm a 21-year-old female from South Africa, currently studying full-time at Swinburne University.</p>
+			</section>
+
+			<section>
+				<h4>HOMETOWN</h4>
+				<p>
+					I was born in Durban, South Africa, and grew up between Durban and Johannesburg before moving to Australia 
+					in 2012. After living in Brisbane and Perth, I settled in Melbourne in 2018, where I currently reside. My 
+					hometown, Durban, is a vibrant coastal city known for its golden beaches along the Indian Ocean, year-round 
+					subtropical climate, and being home to the busiest port in Africa. It's also famous for its rich cultural 
+					mix, Indian cuisine - especially the iconic 'bunny chow' - and being a hub for surfing and outdoor activities.
+				</p>
+			</section>
+
+			<section>
+				<h4>GREATEST ACHIEVEMENT</h4>
+				<p>
+					One of my greatest achievements so far has been completing my first year of university while also designing 
+					and developing my first small game project. Balancing full-time study with a creative pursuit not only 
+					strengthened my time management skills but also gave me the confidence to pursue a career in games development.
+				</p>
+			</section>
+
+			<section>
+				<h4>INTERESTS</h4>
+				<div class="interests-container">
+					<p>
+						Some of my favourite games include Fallout, Minecraft, Helldivers 2, Destiny 2, and Marvel Rivals. I don't read
+						much for leisure, but I do enjoy diving into books when they're about topics I want to learn more about, such
+						as programming or design. When it comes to films, I like action movies such as Baby Driver and the Marvel 
+						Cinematic Universe, though I tend to enjoy TV series even more. I'm especially drawn to mystery, crime, and 
+						drama shows like Suits, Found, The Rookie, House M.D., and Psych, as well as comedies like Brooklyn 99 and 
+						Friends. 
+					</p>
+
+					<div class="food-image">
+						<a href="images/food.png">
+							<img src="images/food.png" alt="food image" />
+						</a>
+					</div>
+				</div>
+			</section>
+
+			<section>
+				<p>
+					I also enjoy spending time with friends, and the image above shows me with a few of them at a nice restaurant 
+					in Melbourne. I chose this photo because it was taken on my 21st birthday, when we all went out to celebrate together.
+				</p>
+
+				<div class="friends-image">
+					<a href="images/friends.png">
+						<img src="images/friends.png" alt="food image" />
+					</a>
+				</div>
+
 			</section>
 
 			<footer><p>Copyright © 2025, Dominique Tait</p></footer>
