--- a/3_career.html
+++ b/3_career.html
@@ -54,9 +54,115 @@
 			</div>
 
 			<section>
-				<h4>Career Subtitles</h4>
-				<p>Career text information</p>
+				<h4>CAREER GOALS</h4>
+				<p>
+					I'm currently studying a double degree in Computer Science (majoring in Games Development) 
+					and a Bachelor of Games and Interactivity. I'm passionate about creating interactive experiences - whether 
+					that's through developing small indie games or building engaging, functional websites.Alongside my studies, 
+					I enjoy experimenting with web development and game design projects, with the hope of turning these skills 
+					into opportunities to earn money on the side by collaborating with others or releasing my own work.My 
+					long-term aspiration is to create an indie game produced in Australia that players genuinely love and 
+					enjoy. I want to offer the same sense of fun, comfort, and escape that games gave me while growing up.
+				</p>
 			</section>
+
+			<section>
+				<h4>UNIVERSITY TIMETABLE</h4>
+					<table>
+						<tr>
+							<th></th>
+							<th>Monday</th>
+							<th>Tuesday</th>
+							<th>Wednesday</th>
+							<th>Thursday</th>
+							<th>Friday</th>
+							<th>Saturday</th>
+							<th>Sunday</th>
+						</tr>
+
+						<tr>
+							<td>9:30 AM</td>
+							<td class="busy">COS10005 Lecture</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td>10:30 AM</td>
+							<td rowspan="2" class="busy">GAM20003 Lecture</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td rowspan="2" class="busy">GAM20003 Class</td>
+							<td></td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td>11:30 AM</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td>12:30 PM</td>
+							<td></td>
+							<td rowspan="2" class="busy">COS10005 Class</td>
+							<td></td>
+							<td></td>
+							<td rowspan="2" class="busy">COS10025 Class</td>
+							<td></td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td>1:30 PM</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td>2:30 PM</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td>3:30 PM</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td>4:30 PM</td>
+							<td></td>
+							<td class="busy">COS10025 Lecture</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</table>
+				</section>
 
 			<footer><p>Copyright © 2025, Dominique Tait</p></footer>
 		</main>
