--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</div>
 
 					<div class="grid-item">
-						<a href="6_animations.html">
+						<a href="6_contact.html">
 							<h3>CONTACT</h3>
 						</a>
 					</div>
