--- a/2_about.html
+++ b/2_about.html
@@ -47,7 +47,7 @@
 				}
 			</script>
 
-			<div class="hero-container">
+			<div class="header-container">
 				<header>
 					<h1>About Me</h1>
 				</header>
@@ -67,6 +67,12 @@
 					subtropical climate, and being home to the busiest port in Africa. It's also famous for its rich cultural 
 					mix, Indian cuisine - especially the iconic 'bunny chow' - and being a hub for surfing and outdoor activities.
 				</p>
+
+				<div class="me-image">
+					<a href="images/2010-06-20.jpg">
+						<img src="images/2010-06-20.jpg" alt="food image" />
+					</a>
+				</div>
 			</section>
 
 			<section>
