--- a/3_career.html
+++ b/3_career.html
@@ -47,7 +47,7 @@
 				}
 			</script>
 
-			<div class="hero-container">
+			<div class="header-container">
 				<header>
 					<h1>Career</h1>
 				</header>
@@ -58,10 +58,21 @@
 				<p>
 					I'm currently studying a double degree in Computer Science (majoring in Games Development) 
 					and a Bachelor of Games and Interactivity. I'm passionate about creating interactive experiences - whether 
-					that's through developing small indie games or building engaging, functional websites.Alongside my studies, 
+					that's through developing small indie games or building engaging, functional websites.
+				</p>
+			</section>
+
+			<section>
+				<p>
+					Alongside my studies, 
 					I enjoy experimenting with web development and game design projects, with the hope of turning these skills 
-					into opportunities to earn money on the side by collaborating with others or releasing my own work.My 
-					long-term aspiration is to create an indie game produced in Australia that players genuinely love and 
+					into opportunities to earn money on the side by collaborating with others or releasing my own work.
+				</p>
+			</section>
+
+			<section>
+				<p>
+					My long-term aspiration is to create an indie game produced in Australia that players genuinely love and 
 					enjoy. I want to offer the same sense of fun, comfort, and escape that games gave me while growing up.
 				</p>
 			</section>
