--- a/4_video.html
+++ b/4_video.html
@@ -47,15 +47,20 @@
 				}
 			</script>
 
-			<div class="hero-container">
+			<div class="header-container">
 				<header>
 					<h1>Video</h1>
 				</header>
 			</div>
 
 			<section>
-				<h4>Video Subtitles</h4>
-				<p>Video text</p>
+				<h4>VIDEO</h4>
+				<p>The following video is just a quick summary of some of the games I like to play.</p>
+			
+				<div>
+					video
+					<!-- VIDEO -->
+				</div>
 			</section>
 
 			<footer><p>Copyright © 2025, Dominique Tait</p></footer>
