--- a/5_animations.html
+++ b/5_animations.html
@@ -47,18 +47,36 @@
 				}
 			</script>
 
-			<div class="hero-container">
+			<div class="header-container">
 				<header>
-					<h1>Animation information</h1>
+					<h1>Animation Information</h1>
 				</header>
 			</div>
 
 			<section>
-				<h4>Animation Subtitles</h4>
-				<p>Animation text</p>
+				<h4>LINKS IN NAVIGATION BAR</h4>
+				<p>
+					Throughout my webpages, I have implemented a number of animations. The first one was where if the mouse hovered over the links in the navigation bar, 
+					it would smoothly show the text-decoration.
+				</p>
 			</section>
 
-			<footer><p>Copyright © 2025, Dominique Tait</p></footer>
+			<section>
+				<h4>MOBILE NAVIGATION BAR</h4>
+				<p>The second one was where if the user opened the navigation bar on mobile, it would open smoothly.</p>
+			</section>
+
+			<section>
+				<h4>LINKS IN NAVIGATION BAR</h4>
+				<p>The third one was if the user hovered over the navigation bar links, it would show the text-decoration smoothly.</p>
+			</section>
+
+			<section>
+				<h4>GRID HIGHLIGHTS</h4>
+				<p>The fourth one was if the user hovered over the highlights on the home page, they would move up smoothly.</p>
+			</section>
+			
+			<footer><p>Copyright © 2025, dominique Tait</p></footer>
 		</main>
     </body>
 </html>
