--- a/5_animations.html
+++ b/5_animations.html
@@ -14,7 +14,13 @@
 		<main>
 			<nav>
 				<ul class="sidebar">
-					<li onclick="closeSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e3e3e3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+					<li onclick="closeSidebar()">
+						<a href="#">
+							<svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e3e3e3">
+								<path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
+							</svg>
+						</a>
+					</li>
 					<li><span class="brand-style">DT</span></li>
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="2_about.html">ABOUT</a></li>
@@ -31,7 +37,11 @@
 					<li class="hideOnMobile"><a href="4_video.html">VIDEO</a></li>
 					<li class="hideOnMobile"><a href="5_animations.html">ANIMATIONS</a></li>
 					<li class="hideOnMobile"><a href="6_contact.html">CONTACT</a></li>
-					<li class="menu-button" onclick="openSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+					<li class="menu-button" onclick="openSidebar()">
+						<a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e3e3e3">
+							<path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+						</a>
+					</li>
 				</ul>
 			</nav>
 
