--- a/3_career.html
+++ b/3_career.html
@@ -50,12 +50,12 @@
 			<script>
 				function openSidebar(){
 					const sidebar = document.querySelector('.sidebar')
-					sidebar.style.display = 'flex'
+					sidebar.classList.add('show');
 				}
 
 				function closeSidebar(){
 					const sidebar = document.querySelector('.sidebar')
-					sidebar.style.display = 'none'
+					sidebar.classList.remove('show');
 				}
 			</script>
 
@@ -88,7 +88,7 @@
 					enjoy. I want to offer the same sense of fun, comfort, and escape that games gave me while growing up.
 				</p>
 			</section>
-
+			<hr>
 			<section>
 				<h4>UNIVERSITY TIMETABLE</h4>
 					<table>
