--- a/4_video.html
+++ b/4_video.html
@@ -67,14 +67,27 @@
 
 			<section>
 				<h4>VIDEO</h4>
-				<p>The following video is just a quick summary of some of the games I like to play.</p>
-			
-				<div>
-					video
-					<!-- VIDEO -->
-				</div>
-			</section>
+					<article>
+						<p>The following video is just a quick summary of some of the games I like to play.</p>
+						
+						<div class="video-container">
+							<!-- VIDEO -->
+							<video controls width="100%">
+								<source src="video.mp4" type="video/mp4">
+								Your browser does not support the video tag.
+							</video>
+						</div>
+					</article>
 
+					<aside>
+						<h4>SUMMARY</h4>
+						<ol>
+							<li>Favorite game genres: FPS, RPG, Strategy</li>
+							<li>Top recent games: Helldivers, Marvel Rivals, Stardew Valley</li>
+							<li>Games I like making: 2D side scrolling, 3D adventure and 3D FPS</li>
+						</ol>
+					</aside>
+			</section>
 			<footer><p>Copyright © 2025, Dominique Tait</p></footer>
 		</main>
     </body>
