--- a/5_animations.html
+++ b/5_animations.html
@@ -67,7 +67,7 @@
 				<h4>LINKS IN NAVIGATION BAR</h4>
 				<p>
 					Throughout my webpages, I have implemented a number of animations. The first one was where if the mouse hovered over the links in the navigation bar, 
-					it would smoothly show the text-decoration.
+					it would smoothly show an underline effect for visual feedback to the user.
 				</p>
 			</section>
 
@@ -77,13 +77,8 @@
 			</section>
 
 			<section>
-				<h4>LINKS IN NAVIGATION BAR</h4>
-				<p>The third one was if the user hovered over the navigation bar links, it would show the text-decoration smoothly.</p>
-			</section>
-
-			<section>
 				<h4>GRID HIGHLIGHTS</h4>
-				<p>The fourth one was if the user hovered over the highlights on the home page, they would move up smoothly.</p>
+				<p>The third one was if the user hovered over the highlights on the home page, they would move up smoothly.</p>
 			</section>
 			
 			<footer><p>Copyright © 2025, dominique Tait</p></footer>
