--- a/5_animations.html
+++ b/5_animations.html
@@ -78,7 +78,8 @@
 
 			<section>
 				<h4>GRID HIGHLIGHTS</h4>
-				<p>The third one was if the user hovered over the highlights on the home page, they would move up smoothly.</p>
+				<p>The third one was if the user hovered over the highlights on the home page, they would move up smoothly.
+				<p>It can be found on the <span id="home-span"><a href="index.html">HOME</a> page.</p></span></p>
 			</section>
 			
 			<footer><p>Copyright © 2025, dominique Tait</p></footer>
