--- a/4_video.html
+++ b/4_video.html
@@ -72,7 +72,7 @@
 						
 						<div class="video-container">
 							<video controls width="100%">
-								<source src="video.mp4" type="video/mp4">
+								<source src="videos/video.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video>
 						</div>
